# lulzfish

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: deploy-wasm.yml
docs/: DESIGN.md
src/: main.cpp
src/lulzfish/core/: attacks.cpp  attacks.hpp  bitboard.hpp  movegen.cpp  movegen.hpp  position.cpp  position.hpp  types.hpp
src/lulzfish/eval/: graph_eval.cpp  graph_eval.hpp  material.cpp  material.hpp  persistence.cpp  persistence.hpp  sheaf_state.hpp  sheaftop.cpp  sheaftop.hpp
src/lulzfish/search/: search.cpp  search.hpp  transposition.cpp  transposition.hpp
src/lulzfish/uci/: uci.cpp  uci.hpp
src/lulzfish/wasm/: wasm_api.cpp
tests/: graph_benchmark.cpp  perft_test.cpp  search_regression.cpp  topo_consistency_test.cpp
tools/: build_wasm.sh  lulzfish_gui.py  lulzfish_match.py  run_micro_engine_bench.py  run_stockfish_ladder.py
tools/rl/: README.md  __init__.py  generate_training_data.py  lulzfish_env.py  puffer_lulzfish_env.py  requirements-puffer.txt  requirements.txt  run_puffer_smoke.py  train_linear_models.py  train_mlp_eval.py  train_topo_residual.py  train_topo_stockfish.py
web/wasm/: app.js  index.html  worker.js
web/wasm/benchmarks/: app.js  data.json  index.html
